tests/models/struct/unnamed/usize/fail/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2.0)]
    usize
);
fn main() {}
